RFF-7: Delete unused test method, and inline method only called once